--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,25 @@ input{
  font-size: 1.3rem;
   width: 100%;
 }
+
+.card{
+align-content:space-around;
+border:1px solid red;
+border-radius: 6px;
+overflow:hidden;
+margin-bottom: 10px;
+margin-right: 10px;
+
+}
+
+.card img {
+  max-height:200px;
+  width: 100%;
+}
+
+.card-grid{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+
+}
