--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,174 @@
-*{
+* {
   font-family: 'Press Start 2P';
 }
-body{
-  padding: 60px;
-}
-input{
- font-size: 1.3rem;
-  width: 100%;
+
+body {
+  background-image: radial-gradient(var(--background));
+  background-size : 2px 3px;
+  font-family     : "Archivo", sans-serif;
+  color           : var(--primary);
+  padding         : 60px;
 }
 
-.card{
-align-content:space-around;
-border:1px solid red;
-border-radius: 6px;
-overflow:hidden;
-margin-bottom: 10px;
-margin-right: 10px;
+input {
+  font-size: 1.3rem;
+  width    : 100%;
+}
+
+.color-wave {
+
+  animation: colors-wave 5s infinite;
+}
+
+@keyframes colors-wave {
+  0% {
+    color: var(--primary);
+
+  }
+
+  25% {
+
+    color: var(--yellow);
+  }
+
+  50% {
+
+    color: var(--orange);
+  }
+
+  75% {
+
+    color: var(--red);
+  }
+
+  100% {
+
+    color: var(--secondary);
+  }
+
 
 }
+
+.card {
+  overflow        : hidden;
+  align-content   : space-around;
+  margin-bottom   : 10px;
+  margin-right    : 10px;
+  background-color: var(--background);
+  display         : block;
+  width           : 400px;
+  min-height      : 90px;
+  cursor          : pointer;
+  padding         : 15px;
+  margin          : calc(12vh - 30px) auto 0 auto;
+  border          : 3px solid var(--primary);
+  box-shadow      : 10px -10px 0 -3px var(--background), 10px -10px var(--green),
+    20px -20px 0 -3px var(--background), 20px -20px var(--yellow),
+    30px -30px 0 -3px var(--background), 30px -30px var(--orange),
+    40px -40px 0 -3px var(--background), 40px -40px var(--red);
+}
+
+.card:hover {
+  animation: shadow-wave 1s ease infinite;
+}
+
+
+@keyframes shadow-wave {
+  0% {
+    border: 3px solid var(--primary);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--green),
+      20px -20px 0 -3px var(--background), 20px -20px var(--yellow),
+      30px -30px 0 -3px var(--background), 30px -30px var(--orange),
+      40px -40px 0 -3px var(--background), 40px -40px var(--red);
+  }
+
+  20% {
+    border: 3px solid var(--red);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--primary),
+      20px -20px 0 -3px var(--background), 20px -20px var(--green),
+      30px -30px 0 -3px var(--background), 30px -30px var(--yellow),
+      40px -40px 0 -3px var(--background), 40px -40px var(--orange);
+  }
+
+  40% {
+    border: 3px solid var(--orange);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--red),
+      20px -20px 0 -3px var(--background), 20px -20px var(--primary),
+      30px -30px 0 -3px var(--background), 30px -30px var(--green),
+      40px -40px 0 -3px var(--background), 40px -40px var(--yellow);
+  }
+
+  60% {
+    border: 3px solid var(--yellow);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--orange),
+      20px -20px 0 -3px var(--background), 20px -20px var(--red),
+      30px -30px 0 -3px var(--background), 30px -30px var(--primary),
+      40px -40px 0 -3px var(--background), 40px -40px var(--green);
+  }
+
+  80% {
+    border: 3px solid var(--green);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--yellow),
+      20px -20px 0 -3px var(--background), 20px -20px var(--orange),
+      30px -30px 0 -3px var(--background), 30px -30px var(--red),
+      40px -40px 0 -3px var(--background), 40px -40px var(--primary);
+  }
+
+  100% {
+    border: 3px solid var(--primary);
+    box-shadow: 10px -10px 0 -3px var(--background), 10px -10px var(--green),
+      20px -20px 0 -3px var(--background), 20px -20px var(--yellow),
+      30px -30px 0 -3px var(--background), 30px -30px var(--orange),
+      40px -40px 0 -3px var(--background), 40px -40px var(--red);
+  }
+
+}
+
+
+:root {
+  --primary   : #22D2A0;
+  --secondary : #192824;
+  --background: #192824;
+  --green     : #1FC11B;
+  --yellow    : #FFD913;
+  --orange    : #FF9C55;
+  --red       : #FF5555;
+}
+
+
+.card p {
+  font-size     : 11px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  margin-bottom : 10px;
+}
+
+
+
 
 .card img {
-  max-height:200px;
-  width: 100%;
+  max-height: 200px;
+  width     : 100%;
 }
 
-.card-grid{
-  display: flex;
-  flex-wrap: wrap;
+.card-grid {
+  display       : flex;
+  flex-wrap     : wrap;
   flex-direction: row;
 
+}
+
+.separador {
+
+  display        : flex;
+  align-content  : center;
+  justify-content: center;
+
+}
+
+.separador h2 {
+  text-align: center;
+  padding   : 1% 5%;
+  margin    : 2%;
+  border    : 2px dashed var(--primary);
 }
